# automotive_types

./: .gitignore  README.md  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: github-actions.yml
src/automotive-types/: Signal.py
src/automotive_types/: Signal.py  SignalDefinition.py
tests/unit/: test_SignalDefinition.py
